Updated books 101, 154, QSA22, and QSA24

--- a/html/Share/QSA22.html
+++ b/html/Share/QSA22.html
@@ -12,19 +12,39 @@ $author = '倪匡';
 $title = '變幻雙星'; 
 $book = 'HQSA22';
 ShowBookTitle() ;
-ShowUpdbDownload('2012/3/31 (198K)');
-ShowPdbDownload('2005/6/17 (192K) 2012/3/31');
+ShowUpdbDownload('2024/5/28 (198K) 2012/3/31');
+ShowPdbDownload('2012/3/31 (192K) 2005/6/17');
 ShowPrcDownload('2012/3/31 (195K)');
-ShowEpubDownload('2012/3/31 (125K)');
+ShowEpubDownload('2024/5/28 (125K) 2012/3/31');
+ShowVEpubDownload('2024/5/28 (125K)');
 BookSectionEnd();
 ?>
-好讀書櫃《經典版》，感謝Jerry Peng提供文字檔。<br>
+<img src="covers/QSA22.jpg" HSPACE=8 align=right>
+好讀書櫃【典藏版】。感謝Jerry Peng提供文字檔，感謝Henry整理製作及勘誤成為【典藏版】。<br>
 <br>
 倪匡之原振俠傳奇之22。<br>
 <br>
 <font size=2>
-勘誤表：<br>
-沈默/沉默 (mPDB 2012/3/31)<br>
+<a href="?M=hd&P=pr">勘誤表</a>：<br>
+(Henry 2024/5/28)<br>
+──/……（多處）<br>
+發展的前景/發展的前導<br>
+自名出身/自命出身<br>
+與之胡調/與之胡謅<br>
+在都市的大廈群中，十分傑出/在都市的大廈群中，十分突出<br>
+就在這個位子/就在這個位置<br>
+佩帶的珠飾/佩帶的珍飾<br>
+高棉/柬埔寨（多處）<br>
+兄第/兄弟<br>
+宣布/宣佈<br>
+竟竟/究竟<br>
+沒有說多久/沒有等了多久<br>
+冶療/治療<br>
+登岸渡水/登萍渡水<br>
+選用錯誤/選角錯誤<br>
+<br>
+(mPDB 2012/3/31)<br>
+沈默/沉默<br>
 佈署/部署<br>
 低沈/低沉<br>
 沈聲/沉聲<br>
