--- a/html/Share/QSA24.html
+++ b/html/Share/QSA24.html
@@ -12,19 +12,32 @@ $author = '倪匡';
 $title = '催命情聖'; 
 $book = 'HQSA24';
 ShowBookTitle();
-ShowUpdbDownload('2012/3/31 (193K) 2016/5/6');
-ShowPrcDownload('2012/3/31 (182K) 2016/5/6');
+ShowUpdbDownload('2024/5/28 (193K) 2016/5/6 2012/3/31');
+ShowPrcDownload('2016/5/6 (182K) 2012/3/31');
 ShowMobiDownload('2016/5/6 (508K)');
-ShowEpubDownload('2012/3/31 (114K) 2016/5/6');
-ShowVEpubDownload('2016/5/6 (114K)');
+ShowEpubDownload('2024/5/28 (114K) 2016/5/6 2012/3/31');
+ShowVEpubDownload('2024/5/28 (114K) 2016/5/6');
 BookSectionEnd();
 ?>
-好讀書櫃《經典版》，感謝Jerry Peng提供文字檔。感謝henry142勘誤4處。<br>
+<img src="covers/QSA24.jpg" HSPACE=8 align=right>
+好讀書櫃【典藏版】。感謝Jerry Peng提供文字檔，感謝henry142勘誤4處，感謝Henry整理製作及勘誤成為【典藏版】。<br>
 <br>
 倪匡之原振俠傳奇之24。<br>
 <br>
 <font size=2>
 <a href="?M=hd&P=pr">勘誤表</a>：<br>
+(Henry 2024/5/28)<br>
+──/……（多處）<br>
+聲音十分古怪的/發音十分古怪的<br>
+宣布/宣佈<br>
+用達十公尺/用高達十公尺<br>
+異采/異彩<br>
+公布/公佈<br>
+盤據/盤踞<br>
+而外流出/向外流出<br>
+喘著著/喘著氣<br>
+你變得可怕/你瘦得可怕<br>
+<br>
 (henry142 2016/5/6)<br>
 想自己不要有/想讓自己不要有<br>
 喪失他們巫術能力/喪失他們的巫術能力<br>
