--- a/html/book/101.html
+++ b/html/book/101.html
@@ -12,16 +12,17 @@ $author = '倪匡';
 $title = '叢林之神'; 
 $book = 'E101';
 ShowBookTitle() ;
-ShowUpdbDownload('2011/5/13 (177K) 2014/7/4');
-ShowPdbDownload('2002/7/21 (170K) 2014/7/4');
-ShowPrcDownload('2011/5/13 (164K) 2014/7/4');
-ShowEpubDownload('2011/5/13 (115K) 2014/7/4');
-ShowVEpubDownload('2013/5/17 (116K) 2014/7/4');
+ShowUpdbDownload('2024/5/28 (177K) 2014/7/4 2011/5/13');
+ShowPdbDownload('2014/7/4 (170K) 2002/7/21');
+ShowPrcDownload('2014/7/4 (164K) 2011/5/13');
+ShowEpubDownload('2024/5/28 (115K) 2014/7/4 2011/5/13');
+ShowVEpubDownload('2024/5/28 (116K) 2014/7/4 2013/5/17');
 BookSectionEnd();
 ?>
-倪匡之衛斯理系列之 15。感謝施宏澤、YSG、sean lee、Lionel、Lin Lee、JimGee勘誤。<br>
+<img src="covers/101.jpg" HSPACE=8 align=right>
+好讀書櫃【典藏版】。感謝施宏澤、YSG、sean lee、Lionel、Lin Lee、JimGee勘誤，感謝Henry整理製作及勘誤成為【典藏版】。<br>
 <br>
-《叢林之神》包含〈叢林之神〉與〈風水〉兩個故事。<br>
+倪匡之衛斯理系列之 15。《叢林之神》包含〈叢林之神〉與〈風水〉兩個故事。<br>
 <br>
 <b>〈叢林之神〉內容簡介</b><br>
 <br>
@@ -32,7 +33,45 @@ BookSectionEnd();
 一般人都相信風水，尤其是亂世動盪之時，風水命相更是主流，此篇即是以風水為主旨，然而，「風水」究竟是什麼？也許看完本篇故事你就有答案了。<br>
 <br>
 <font size=2>
-勘誤表：<br>
+<a href="?M=hd&P=pr">勘誤表</a>：<br>
+(Henry 2024/5/28)<br>
+──/……（多處）<br>
+但是接下著/但是接下來<br>
+布置/佈置<br>
+也不未曾/也未曾<br>
+屋子己換了/屋子已換了<br>
+決沒有不通過警方/決不能不通過警方<br>
+凶案/兇案<br>
+搖着說：/搖着頭：<br>
+莫求我貪心/莫笑我貪心<br>
+古色古色/古色古香<br>
+發表議論來/發起議論來<br>
+他搖了搖頭/我搖了搖頭<br>
+必竟是/畢竟是<br>
+一張躺椅/一張籐椅<br>
+說到五十年了/就是五十年了<br>
+忍不住沒有/忍住了沒有<br>
+最早派去了一個/最早派去的一個<br>
+開展經濟勢力/擴展經濟勢力<br>
+如果不要是/如果不是要<br>
+占了/佔了<br>
+只有他個人/只要他個人<br>
+我也可能/我也可以<br>
+要使他滿意/務使他滿意<br>
+知道我了/知道了我<br>
+我不也必/我也不必<br>
+搬運夫/搬運伕<br>
+小旅站/小旅店<br>
+在全市中尋我/在全市中尋找<br>
+抑起頭/仰起頭<br>
+那個少年人/那群少年人<br>
+成眾結隊/成群結隊<br>
+聚集在一地/聚集在一起<br>
+還有以極高的速度/還是以極高的速度<br>
+實是是/實在是<br>
+這是不是我的目的地/這裏不是我的目的地<br>
+並進了一間房子/關進了一間房子<br>
+<br>
 (JimGee 2014/7/4)<br>
 人而有/人具有<br>
 <br>
