--- a/html/book/154.html
+++ b/html/book/154.html
@@ -12,19 +12,64 @@ $author = '倪匡';
 $title = '血統'; 
 $book = 'E154';
 ShowBookTitle() ;
-ShowUpdbDownload('2011/6/10 (206K) 2014/2/7');
-ShowPdbDownload('2002/10/14 (199K) 2014/2/7');
-ShowPrcDownload('2011/6/10 (199K) 2014/2/7');
-ShowEpubDownload('2011/6/10 (137K) 2014/2/7');
-ShowVEpubDownload('2013/5/3 (137K) 2014/2/7');
+ShowUpdbDownload('2024/5/28 (206K) 2014/2/7 2011/6/10');
+ShowPdbDownload('2014/2/7 (199K) 2002/10/14');
+ShowPrcDownload('2014/2/7 (199K) 2011/6/10');
+ShowEpubDownload('2024/5/28 (137K) 2014/2/7 2011/6/10');
+ShowVEpubDownload('2024/5/28 (137K) 2014/2/7 2013/5/3');
 BookSectionEnd();
 ?>
-倪匡之衛斯理系列之 61。感謝MisTvAn、Lins、Sherman、Lin Lee勘誤。<br>
+<img src="covers/154.jpg" HSPACE=8 align=right>
+好讀書櫃【典藏版】。感謝MisTvAn、Lins、Sherman、Lin Lee勘誤，感謝Henry整理製作及勘誤成為【典藏版】。<br>
 <br>
-外星人和地球人的混血兒鄭保雲為了躲避星際追殺，把一場驚駭可怕的星際大戰延燒到瘋人院，把衛斯理出賣給外星人，使得……<br>
+倪匡之衛斯理系列之 61。外星人和地球人的混血兒鄭保雲為了躲避星際追殺，把一場驚駭可怕的星際大戰延燒到瘋人院，把衛斯理出賣給外星人，使得……<br>
 <br>
 <font size=2>
-勘誤表：<br>
+<a href="?M=hd&P=pr">勘誤表</a>：<br>
+(Henry 2024/5/28)<br>
+補充文首200字缺文（上接「密碼」故事）<br>
+──/……（多處）<br>
+清醒了話/清醒了的話<br>
+，一定大有古怪/，心知一定大有古怪<br>
+更攻心計/更工心計<br>
+他們聞了又聞/牠們聞了又聞<br>
+嘖噴稱奇/嘖嘖稱奇<br>
+野性的呼喚/荒野的呼喚<br>
+他是回答/他越是回答<br>
+天龍星還在找/天龍星人還在找<br>
+纏夾下去/夾纏下去<br>
+錯覺到「隱形」的效果/起到「隱形」的效果<br>
+駝鳥/鴕鳥<br>
+一番工夫/一番功夫<br>
+睡意朦朧/睡意矇矓<br>
+嚇不到她們/嚇不倒她們<br>
+睡眼朦朧/睡眼矇矓<br>
+攝手攝足/躡手躡足<br>
+大叫大亂/大叫大跳<br>
+一極十分奇妙/一種十分奇妙<br>
+努了努嘴/呶了呶嘴<br>
+傳種接代/傳宗接代<br>
+非對付他們的時候/非對付他們不可的時候<br>
+善於此道/擅於此道<br>
+再造二百年/再過三百年<br>
+氣體的虛影/立體的虛影<br>
+，再道/，甬道<br>
+我會意著/我留意著<br>
+我突然也笑起來/我陡然轟笑起來<br>
+向我臉上拍過來/向我臉上摑了過來<br>
+一是沒有把握/一點也沒有把握<br>
+被我扯斷/被我扭斷<br>
+我突地叫了起來/我陡地叫了起來<br>
+著定了的勢子/蓄定了的勢子<br>
+直送向前/直撲向前<br>
+將小方盒投在手中/將小方盒攫在手中<br>
+壓力強大/威力強大<br>
+射中那邊人/射中那人<br>
+他頓聲道/他顫聲道<br>
+粒狀骨骼/板狀骨骼<br>
+值得看的/值得欣賞<br>
+工作的速度/工作的進度<br>
+<br>
 (Lin Lee 2014/2/7)<br>
 （依皇冠版勘誤）<br>
 盛情想了一會/蹙眉想了一會<br>
