Revised books 1010490427 and 1010490440

--- a/html/Share/1010490427.html
+++ b/html/Share/1010490427.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
 SetTitle("泰瑞．布魯克斯【星際大戰１：威脅潛伏】");
-SetLink('<a href="?M=hd&P=mystery-1">懸疑小說 書目</a>');
+SetLink('<a href="?M=hd&P=scifi-10">奇幻小說 書目</a>');
 </script>
 
 <style>
@@ -19,16 +19,16 @@ $author = '泰瑞．布魯克斯';
 $title = '星際大戰１：威脅潛伏';
 $book = 'P1010490427';
 BookSectionBegin();
-ShowBookTitleOnly();
-ShowEpubDownload('2024/4/24');
-ShowVEpubDownload('2024/4/24');
+ShowBookTitle();
+ShowUpdbDownload('2024/6/1');
+ShowEpubDownload('2024/6/1 2024/4/24');
+ShowVEpubDownload('2024/6/1 2024/4/24');
 BookSectionEnd();
 ?>
 <!-- <img src="covers/1010490427w.jpg" HSPACE=8 align=right> -->
 <img src="covers/1010490427w.jpg" class="center">
 <br>
-好讀書櫃【典藏版】，感謝GP整理製作epub，感謝邱五提供掃瞄檔。<br>
-（本書未設updb檔）<br>
+好讀書櫃【典藏版】，感謝GP整理製作epub，感謝邱五提供掃瞄檔，感謝L8879勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -71,5 +71,178 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+(L8879 2024/6/1)<br>
+空，白畫餘暉/空，白晝餘暉<br>
+空。白畫已退/空。白晝已退<br>
+是這麽說的/是這麼說的<br>
+他能赢！或/他能贏！或<br>
+那樣局促擁擠/那樣侷促擁擠<br>
+，這趙任務/，這趟任務<br>
+橘紅眼晴回瞪/橘紅眼睛回瞪<br>
+我什麽都沒/我什麼都沒<br>
+帽和斗蓬的人/帽和斗篷的人<br>
+悲觀暗付。/悲觀暗忖。<br>
+子、自已死後/子、自己死後<br>
+低聲告誠。/低聲告誡。<br>
+有什麽東西/有什麼東西<br>
+頗為偷快。/頗為愉快。<br>
+擾下劈啪作響/擾下噼啪作響<br>
+盯著斑爛燈火/盯著斑斕燈火<br>
+魁剛告誠他別/魁剛告誡他別<br>
+「這麽多星/「這麼多星<br>
+他非赢不可/他非贏不可<br>
+嚴肅告誠主人/嚴肅告誡主人<br>
+納金心無旁騖，一/納金心無旁鶩，一<br>
+以為自已正在/以為自己正在<br>
+我怎麽總覺/我怎麼總覺<br>
+猜怎麽著！/猜怎麼著！<br>
+、那麽做太/、那麼做太<br>
+你多麽堅強/你多麼堅強<br>
+這是赢得比/這是贏得比<br>
+。這麽做是/。這麼做是<br>
+有什麽話可/有什麼話可<br>
+發出劈啪聲，/發出噼啪聲，<br>
+兩端进射而/兩端迸射而<br>
+經常告誠歐比/經常告誡歐比<br>
+！什麽也沒/！什麼也沒<br>
+你的告誠，我/你的告誡，我<br>
+他將節流閱猛然/他將節流閥猛然<br>
+推動節流閱，給/推動節流閥，給<br>
+沒把節流閱往前/沒把節流閥往前<br>
+他把節流閱推到/他把節流閥推到<br>
+，將節流閱往前/，將節流閥往前<br>
+推動節流閩，結/推動節流閥，結<br>
+器和節流閩繼電/器和節流閥繼電<br>
+抓住節流閩和方/抓住節流閥和方<br>
+引擎節流閩繼電/引擎節流閥繼電<br>
+收起節流閩，引/收起節流閥，引<br>
+他把節流閩拉回/他把節流閥拉回<br>
+金把節流閩推到/金把節流閥推到<br>
+左側節流閩。在/左側節流閥。在<br>
+孩把節流閩往前/孩把節流閥往前<br>
+間，這倡達格族已經/間，這個達格族已經<br>
+其他麥艇墜毀/其他賽艇墜毀<br>
+頸動/顫動<br>
+糯往已久/嚮往已久<br>
+一間主慶/一間主廳<br>
+船身湊成/船身漆成<br>
+還程飛船/遠程飛船<br>
+聯邦鑑隊/聯邦鑑隊<br>
+上腎和下顎/上唇和下顎<br>
+外抱/外袍<br>
+機概/機棚<br>
+羽脂/胭脂<br>
+百髮造型/百變造型<br>
+斂梯/舷梯<br>
+舷窗/舷窗<br>
+麥員會/委員會<br>
+躇跚/蹣跚<br>
+低矮羼風/低矮屏風<br>
+運輪綎/運輸艇<br>
+径異生物/怪異生物<br>
+雄定/確定<br>
+惦衝/俯衝<br>
+我忍怕/我恐怕<br>
+人緣一直很糖/人緣一直很糟<br>
+和這個倒檔兒對硬一眼/和這個倒楣鬼對視一眼<br>
+緊贅/累贅<br>
+開閣水域/開闊水域<br>
+僵硬麥態/僵硬姿態<br>
+給荒維生/拾荒維生<br>
+語的愛化/話語的變化<br>
+秘密蘭著/秘密瞞著<br>
+引擊轉換器/引擎轉換器<br>
+開閣/開闊<br>
+壁的背風面/峭壁的背風面<br>
+繼著布/纒著布<br>
+思豬/思緒<br>
+感賢出來/感覺出來<br>
+崎不平/崎嶇不平<br>
+統洽權/統治權<br>
+訂定修約/訂定條約<br>
+嚴厲眼袖/嚴厲眼神<br>
+違早/遲早<br>
+十幾毫機器人/十幾臺機器人<br>
+白臉龐/白鬚臉龐<br>
+垂著務臂/垂著胳臂<br>
+感到暹疑/感到遲疑<br>
+鰥進兩座建築/躲進兩座建築<br>
+醫報聲/警報聲<br>
+保鏈/保鑣<br>
+綿緊/繃緊<br>
+資易/貿易<br>
+改愛/改變<br>
+待女/侍女<br>
+一處怒落/一處聚落<br>
+鬼鬼祟票/鬼鬼祟祟<br>
+則養的班薩獸/馴x84養的班薩獸<br>
+遺裡邀邊/邋裡邋遢<br>
+鱔縮的/蜷縮<br>
+啦嘴/咂嘴<br>
+面嚣微笑/面露微笑<br>
+批獸的輕細/批獸的韁繩<br>
+機棫眼/機械眼<br>
+空藍沙漠/空曠沙漠<br>
+乾漓的/乾癟的<br>
+眼睛視秘/眼睛視物<br>
+鍛到達格族身旁/鑽到達格族身旁<br>
+修火尖叫/惱火尖叫<br>
+有條不素/有條不紊<br>
+警扭/憋扭玵<br>
+僅異的/怪異的<br>
+藝擊者/襲擊者<br>
+徵章/徽章<br>
+失跪/失蹤<br>
+𢺳弄/撥弄<br>
+紫袍組繞/紫袍纒繞<br>
+緩細雙臂/纖細雙臂<br>
+菇在一旁/站在一旁<br>
+送地原蟲/迷地原蟲<br>
+速結作用/連結作用<br>
+動讀案/動議案<br>
+未端/末端<br>
+鐵嵌地板/鑲嵌地板<br>
+波倦兩眼/疲倦兩眼<br>
+僧恨/憎恨<br>
+術視下方/俯視下方<br>
+不禁亮爾/不禁莞爾<br>
+幾終長髮/幾綹長髮<br>
+控制條仰/控制俯仰<br>
+雞草和樹根/雜草和樹根<br>
+侄異/怪異<br>
+購騙你們/瞞騙你們<br>
+情緒多愛/情緒多變<br>
+閣哼一聲/悶哼一聲<br>
+激起連淆/起漣漪<br>
+徵波蕩濛/微波蕩漾<br>
+機稱前方/機棚前方<br>
+隱購身分/隱瞞身分<br>
+我是難/我是誰<br>
+隨之震頭/隨之震顫<br>
+禍輪/渦輪<br>
+蓮記魁剛的告該/謹記魁剛的告誡<br>
+機糊/機棚<br>
+畫射槍/雷射槍<br>
+光東/光束<br>
+睡棄/唾棄<br>
+径異/怪異<br>
+發電站梁處/發電站深處<br>
+東手待斃/束手待斃<br>
+雙臂緊援/雙臂緊摟<br>
+狩衝而去/俯衝而去<br>
+所有解障/所有屏障<br>
+平靜眼种/平靜眼神<br>
+疲蔥跡象/疲憊跡象<br>
+金屬積杆/金屬橫杆<br>
+饗步備/賽步霸<br>
+際踹之物/隱瞞之物<br>
+砲管繳射/砲管激射<br>
+絲起皺臉/繃起皺臉<br>
+緊紅黑臉/繃緊紅黑臉<br>
+關閉障/關閉屏障<br>
+珠死戰/殊死戰<br>
+門問就位/門閂就位<br>
+發出異尖嘯/發出怪異尖嘯<br>
+伴攻左側/佯攻左側<br>
 </font>
 </td></tr></table>
