--- a/html/Share/1010490440.html
+++ b/html/Share/1010490440.html
@@ -11,14 +11,14 @@ $author = '雷湼．蘇利．普魯東';
 $title = '諾貝爾文學獎全集１：普魯東詩選';
 $book = 'P1010490440';
 BookSectionBegin();
-ShowBookTitleOnly();
-ShowEpubDownload('2024/5/10');
-ShowVEpubDownload('2024/5/10');
+ShowBookTitle();
+ShowUpdbDownload('2024/6/1');
+ShowEpubDownload('2024/6/1 2024/5/10');
+ShowVEpubDownload('2024/6/1 2024/5/10');
 BookSectionEnd();
 ?>
 <img src="covers/1010490440.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝GP整理製作epub，感謝chin223提供掃瞄檔。
-（本書不設updb檔）<br>
+好讀書櫃【典藏版】，感謝GP整理製作epub，感謝chin223提供掃瞄檔，感謝L8879勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -51,5 +51,99 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+(L8879 2024/6/1)<br>
+也許是最也最精的/也許是最美麗也最精緻的<br>
+物質價位/物質價值<br>
+範國大了/範圍大了<br>
+時人哲學家/詩人哲學家<br>
+諾貝爾交學獎/諾貝爾文學獎<br>
+詩篇」裹/詩篇裏<br>
+高貴而玄與/高貴而玄奧<br>
+多敢詩篇/多數詩篇<br>
+道德的範噼/道德的範疇<br>
+其知的呼喚/良知的呼喚<br>
+擔負裏採悉人類/擔負起探悉人類<br>
+纖細敏感/織細敏感<br>
+細細品嘴/細細品嚐<br>
+只有恭在場/只有恭請在場<br>
+詩歌法文作/詩題法文作<br>
+擴及周圈/擴及周圍<br>
+心塞自行碎裂/心靈自行碎裂<br>
+星星都消失/星星都消隱<br>
+閤上休息/閉上休息<br>
+消失於地平線/消隱於地平線<br>
+風兒的驚緻/風兒的驚動<br>
+稍稽感覺//稍稍感覺<br>
+無精打朵/無精打采<br>
+模糊朦職/模糊曚矓<br>
+地不線/地平線<br>
+什麼樣的樂國/什麼樣的樂園<br>
+超片的/超凡的<br>
+L' Elranger/L' Etranger<br>
+波特菜閒/波特萊爾<br>
+到魯東/到普魯東<br>
+每於的/屬於我的<br>
+我等称；主啊，称在那兒/我等祢；主啊，祢在那兒<br>
+信率/信奉<br>
+尖鈴聲/尖銳聲<br>
+懞懂的/懵懂的<br>
+吹口唷/吹口哨<br>
+輸番/輪番<br>
+母處異鄉/身處異鄉<br>
+鍾響之際/鐘響之際<br>
+窩下這首詩/寫下這首詩<br>
+布利爾・杜巴瑞/加布利爾・杜巴瑞<br>
+一條大利街道/一條義大利街道<br>
+法蘭依・河曼/法蘭依・阿曼<br>
+做工程師的麥想/做工程師的夢想<br>
+親戚家裹/親戚家裏<br>
+普魯束/普魯東<br>
+詩句裛/詩句裏<br>
+浪漫時/浪漫詩<br>
+浪凌主義/浪漫主義<br>
+比軟相似/比較相似<br>
+織巧的詩句/纖巧的詩句<br>
+慷概激昂/慷慨激昂<br>
+整假下半身/整個下半身<br>
+婚嬸/嬸嬸<br>
+他的時中/他的詩中<br>
+他確情道德/他確信道德<br>
+他傲為哲學詩人/他做為哲學詩人<br>
+領發/頒發<br>
+青年時人/青年詩人<br>
+傾人神聖而芳春的/傾入神聖而芳香的<br>
+敬似/敬佩<br>
+宋樹涼評/宋樹涼譯<br>
+爭教/爭執<br>
+多慾善感/多愁善感<br>
+滑息/消息<br>
+呼瑞典學院/呼籲瑞典學院<br>
+學讀極淵博/學識極淵博<br>
+作家：左拉・/作家：左拉。<br>
+學院院土/學院院士<br>
+一名致授/一名教授<br>
+厄著沙拉/厄普沙拉<br>
+牛官方/半官方<br>
+那一藍天/那一整天<br>
+顧感周到/顧慮周到<br>
+奧金王的牛廚/奧金王的牛厩<br>
+在空間裹延 著/在空間裏沿續著<br>
+雲層周圈/雲層周圍<br>
+啟永遠的爭執/做永遠的爭執<br>
+一世紀機起/一世紀繼起<br>
+玲琥剔透/玲瓏剔透<br>
+好玩件/好玩伴<br>
+哪裹料到/哪裏料到<br>
+一般讓者/一般讀者<br>
+莊晨肅穆/莊嚴肅穆<br>
+真測高深/莫測高深<br>
+一個壯翻的輪廓/一個壯闊的輪廓<br>
+交遊極慶/交遊極廣<br>
+沾名釣譽/沽名釣譽<br>
+本人系爲/本人忝爲<br>
+藥琴教授/欒琴教授<br>
+斂衣/歛衣<br>
+凋姿/凋萎<br>
+一八八木/一八八六<br>
 </font>
 </td></tr></table>
