--- a/html/book/audioAB005.html
+++ b/html/book/audioAB005.html
@@ -27,6 +27,7 @@ PlayMP3('AB005-17', '第十七回《絕情幽谷》劉小珍錄音 2024/5/11');
 PlayMP3('AB005-18', '第十八回《公孫谷主》劉小珍錄音 2024/5/18');
 PlayMP3('AB005-19', '第十九回《地底老婦》劉小珍錄音 2024/5/25');
 PlayMP3('AB005-20', '第二十回《俠之大者》劉小珍錄音 2024/6/1');
+PlayMP3('AB005-21', '第二十一回《襄陽鏖兵》劉小珍錄音 2024/6/8');
 
 ?>
 
