--- a/html/book/audioAB005.html
+++ b/html/book/audioAB005.html
@@ -30,6 +30,7 @@ PlayMP3('AB005-20', '第二十回《俠之大者》劉小珍錄音 2024/6/1');
 PlayMP3('AB005-21', '第二十一回《襄陽鏖兵》劉小珍錄音 2024/6/8');
 PlayMP3('AB005-22', '第二十二回《危城女嬰》劉小珍錄音 2024/6/15');
 PlayMP3('AB005-23', '第二十三回《手足情仇》劉小珍錄音 2024/6/22');
+PlayMP3('AB005-24', '第二十四回《意亂情迷》劉小珍錄音 2024/6/29');
 
 ?>
 
