--- a/html/Share/1010490467.html
+++ b/html/Share/1010490467.html
@@ -12,13 +12,13 @@ $title = '落日';
 $book = 'P1010490467';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2024/6/10');
-ShowEpubDownload('2024/6/10');
-ShowVEpubDownload('2024/6/10');
+ShowUpdbDownload('2024/7/2 2024/6/10');
+ShowEpubDownload('2024/7/2 2024/6/10');
+ShowVEpubDownload('2024/7/2 2024/6/10');
 BookSectionEnd();
 ?>
 <img src="covers/1010490467.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝Ching整理製作，感謝邱五提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝Ching整理製作，感謝邱五提供掃瞄檔，感謝mitter/Ching勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -61,5 +61,85 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+(2024/7/2 mitter/Ching)<br>
+mitter 提供的勘誤表內容如下：<br>
+高知名度的编導演/高知名度的編導演<br>
+綜藝節目特有的笑容/綜藝節目特有的笑聲<font color="tomato">（原書檔是「笑容」，確實怪怪的，故改為「笑聲」較順暢）</font><br>
+望下任何證據/留下任何證據<br>
+平時的週末一機/平時的週末一樣<br>
+真得嚇了一跳/真的嚇了一跳<br>
+真的和老闆很熱/真的和老闆很熟<br>
+媽媾應該問我/媽媽應該問我<br>
+才會產生這穫想法/才會產生這種想法<br>
+就是在慕尼克國際影展/就是在慕尼黑國際影展<br>
+走去鑯塔看看/走去鐵塔看看<br>
+不敢告好朋友和女朋友/不敢告訴好朋友和女朋友<br>
+反面有人羨慕地問我/反而有人羨慕地問我<br>
+煮咖啡時間我要不要喝/煮咖啡時問我要不要喝<br>
+買回來的維誌上/買回來的雜誌上<br>
+在回彼士頓之前/在回波士頓之前<br>
+正隆是個聽明人/正隆是個聰明人<br>
+但是谷部導演/但是長谷部導演<font color="tomato">（原書檔：但長谷部導演）</font><br>
+採取先寫企新書/採取先寫企劃書<br>
+而旦坐在我附近/而且坐在我附近<br>
+受到天氣的影嚮/受到天氣的影響<br>
+建行心理諮商/進行心理諮商<br>
+黃色麻署糬/黃色麻糬<br>
+過到這種情況時/遇到這種情況時<br>
+乾瘦蒼自/乾瘦蒼白<br>
+一看就很嗯心/一看就很噁心<br>
+想要揍近過去看/想要湊近過去看<br>
+︱臉竊笑的男生/一臉竊笑的男生<br>
+鬆了︱口氣/鬆了一口氣<br>
+所以由體育殷長/所以由體育股長<br>
+掛在梁上的繩子/掛在樑上的繩子<font color="tomato">（不做更改）（原書檔：「梁」是對的，「樑」雖然也很常見常用，但「樑」是「梁」的異體字，故不做更改）</font><br>
+心理詔商/心理諮商<br>
+故聲大哭/放聲大哭<br>
+腦梅中想著別人的臉/腦海中想著別人的臉<br>
+同意我進她房問時/同意我進她房間時<br>
+我推側應該是/我推測應該是<br>
+從來沒有告訢我/從來沒有告訴我<br>
+所以之前認有點在意/所以之前認為有點在意<font color="tomato">（原書檔：所以之前就有點在意）</font><br>
+年幼的弟弟或妹珠/年幼的弟弟或妹妹<br>
+他說他沒有機/他說他沒有手機<br>
+也不會第我買手機/也不會替我買手機<font color="tomato">（原書檔：也不會幫我買手機）</font><br>
+信纸/信紙<br>
+哪裡最先開始發？/哪裡最先開始？<font color="tomato">（原書檔：哪裡最先開始發抖？）</font><br>
+保健室的女名師/保健室的女老師<br>
+祖父母為此威到不滿/祖父母為此感到不滿<br>
+我無心讀者/我無心讀書<br>
+讓我很受打擊鄉/讓我很受打擊<br>
+抵達了目的說/抵達了目的地<br>
+寶恃瓶/寶特瓶<br>
+搞不好就連常事人/搞不好就連當事人<br>
+也去見了常初為被告/也去見了當初為被告<br>
+這把父母也燒死了/還把父母也燒死了<br>
+老屋的橫梁/老屋的橫樑<font color="tomato">（不做更改）（原書檔：「梁」是對的，故不做更改）</font><br>
+戳稿/截稿<br>
+所人以就愛上了這首樂曲/所以就愛上了這首樂曲<br>
+他無放在家裡/他無法放在家裡<br>
+︱定是主辦單位/一定是主辦單位<br>
+菜烏/菜鳥<br>
+招牌上寫著「影院」三個字/ 招牌上寫著「影院」二個字<br>
+<br>
+關於 mitter 勘誤中提到的：<br>
+<font color="slateblue">此外，關於書中某個地點-影院<br>
+對照首次出現的描述是：招牌上寫著﹁影院﹂三個字<br>
+參考日文電影院的的漢字寫法，應為映画館，即中文寫法的映畫館，<br>
+故建議下列書中段落統一修正影院二字為映畫館才合適，<br>
+不然就應該修改首次出現的描述為兩個字。<br>
+<br>
+招牌上寫著﹁影院﹂三個字/招牌上寫著﹁映畫館﹂三個字<br>
+這裡也會像﹁影院﹂咖啡店一樣/這裡也會像﹁映畫館﹂咖啡店一樣<br>
+電影院地下室的﹁影院﹂咖啡店/電影院地下室的﹁映畫館﹂咖啡店<br>
+那就點影院綜合咖啡/那就點映畫館綜合咖啡<br>
+﹁就是﹃影院﹄的老客人啊/﹁就是﹃映畫館﹄的老客人啊<br>
+一起去﹁影院﹂咖啡店/一起去﹁映畫館﹂咖啡店<br>
+但這家名叫﹁影院﹂咖啡店/但這家名叫﹁映畫館﹂咖啡店<br>
+影院綜合咖啡/映畫館綜合咖啡</font><br>
+<br>
+感謝mitter提供的意見。<br>
+因原譯者是將日文「 映画館  」譯為「影院」，<br>
+這部分為給予原譯者尊重，故不做更改，選擇將＂招牌上寫著「影院」三個字／招牌上寫著「影院」二個字<br>
 </font>
 </td></tr></table>
