--- a/html/Share/1010490427.html
+++ b/html/Share/1010490427.html
@@ -28,7 +28,7 @@ BookSectionEnd();
 <!-- <img src="covers/1010490427w.jpg" HSPACE=8 align=right> -->
 <img src="covers/1010490427w.jpg" class="center">
 <br>
-好讀書櫃【典藏版】，感謝GP整理製作epub，感謝邱五提供掃瞄檔，感謝L8879勘誤。<br>
+好讀書櫃【典藏版】，感謝GP整理製作epub，感謝邱五提供掃瞄檔，感謝L8879、Jack勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -71,6 +71,57 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+(Jack 2024/7/2)<br>
+乞丐映谷/乞丐峽谷<br>
+以控制連接/以控制纜連接<br>
+哨壁/峭壁<br>
+賽步觸/賽步霸<br>
+雛峽谷/離峽谷<br>
+節流闕/節流閥<br>
+離開衝/離開俯衝<br>
+趨勝/翅膀<br>
+彷德/彷彿<br>
+脫際/脫離<br>
+捧車/摔車<br>
+航髒/骯髒<br>
+貴罵/責罵<br>
+把錯侄在/把錯怪在<br>
+奉然自若/泰然自若<br>
+過近幾公分/逼近幾公分<br>
+挑爨/挑釁<br>
+呆，著自己/呆，想著自己<br>
+沙士/沙土<br>
+探撞/擦撞<br>
+緊累在後/緊跟在後<br>
+衣跟寬鬆/衣服寬鬆<br>
+身證/身體<br>
+抵檔/抵擋<br>
+熟浪/熱浪<br>
+熙來往/熙來攘往<br>
+徼章/徽章<br>
+賽艇還手/賽艇選手<br>
+班薩默/班薩獸<br>
+駕駛艇/駕駛賽艇<br>
+工作權/工作檯<br>
+參餐/參賽<br>
+灰降/灰眸<br>
+旗監/旗艦<br>
+今魁剛納閃/令魁剛納悶<br>
+待奉議長/侍奉議長<br>
+特的戰略/特殊的戰略<br>
+違疑片刻/遲疑片刻<br>
+傳來⋯⋯/傳來：<br>
+捉摸不定︙⋯/捉摸不定︙︙<br>
+雖毛蒜皮/雞毛蒜皮<br>
+澱出杯緣/濺出杯緣<br>
+面微笑/面露微笑<br>
+恢復查面/恢復畫面<br>
+掩蓋抖/掩蓋顫抖<br>
+高高在山/高高在上<br>
+隨待問圍/隨待周圍<br>
+储身向前/俯身向前<br>
+斗蓬/斗篷<br>
+<br>
 (L8879 2024/6/1)<br>
 空，白畫餘暉/空，白晝餘暉<br>
 空。白畫已退/空。白晝已退<br>
