Uploaded books 1010490502 and 1010490503

--- a/html/Share/1010490427.html
+++ b/html/Share/1010490427.html
@@ -20,9 +20,9 @@ $title = '星際大戰１：威脅潛伏';
 $book = 'P1010490427';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2024/6/1');
-ShowEpubDownload('2024/6/1 2024/4/24');
-ShowVEpubDownload('2024/6/1 2024/4/24');
+ShowUpdbDownload('2024/7/2 2024/6/1');
+ShowEpubDownload('2024/7/2 2024/6/1 2024/4/24');
+ShowVEpubDownload('2024/7/2 2024/6/1 2024/4/24');
 BookSectionEnd();
 ?>
 <!-- <img src="covers/1010490427w.jpg" HSPACE=8 align=right> -->
