--- a/html/Share/1010490494.html
+++ b/html/Share/1010490494.html
@@ -45,7 +45,7 @@ BookSectionEnd();
 <br>
 米克．約斯（Michael Hjorth）<br>
 <br>
-一九六三年生於瑞典維斯比市（Visby）。他是斯堪地那維亞地區頗負盛名的編劇與製作人，並創辦Tre Vanner製片公司。該公司作品包括瑞典最高人氣情境喜劇《Svensson Svensson》及電影《Easy Money》。米克寫作類別廣泛，喜劇、劇情、恐怖、犯罪皆遊刃有餘。
+一九六三年生於瑞典維斯比市（Visby）。他是斯堪地那維亞地區頗負盛名的編劇與製作人，並創辦Tre Vanner製片公司。該公司作品包括瑞典最高人氣情境喜劇《Svensson Svensson》及電影《Easy Money》。米克寫作類別廣泛，喜劇、劇情、恐怖、犯罪皆遊刃有餘。<br>
 <br>
 漢斯．路森菲特（Hans Rosenfeldt）<br>
 <br>
