--- a/html/Share/1010490502.html
+++ b/html/Share/1010490502.html
@@ -23,7 +23,8 @@ ShowEpubDownload('2024/9/9');
 ShowVEpubDownload('2024/9/9');
 BookSectionEnd();
 ?>
-<img src="covers/1010490502.jpg" HSPACE=8 align=right>
+<div class="covers"><img src="covers/1010490502.jpg" HSPACE=8 align=right></div>
+
 好讀書櫃【典藏版】，感謝L8879/GP整理製作，感謝chin223提供掃瞄檔。（本書不設updb檔）<br>
 <br>
 <strong>本書簡介：</strong><br>
