--- a/html/Share/1010490504.html
+++ b/html/Share/1010490504.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-SetTitle("王鼎鈞【心靈與宗教信仰】");
+SetTitle("王鼎鈞【桃花流水沓然去】");
 SetLink('<a href="?M=hd&P=wisdom-3"> 隨身智囊 書目</a>');
 </script>
 <style>
@@ -15,22 +15,25 @@ SetLink('<a href="?M=hd&P=wisdom-3"> 隨身智囊 書目</a>');
 <?php
 require_once('show-book.php');
 $author = '王鼎鈞';
-$title = '心靈與宗教信仰';
-$book = 'P1010490499';
+$title = '桃花流水沓然去';
+$book = 'P1010490504';
 BookSectionBegin();
-ShowBookTitle();
-ShowUpdbDownload('2024/9/4');
-ShowEpubDownload('2024/9/4');
-ShowVEpubDownload('2024/9/4');
+ShowBookTitleOnly();
+ShowEpubDownload('2024/9/11');
+ShowVEpubDownload('2024/9/11');
 BookSectionEnd();
 ?>
-<div class="covers"><img src="covers/1010490499.jpg" HSPACE=8 align=right></div>
-
-好讀書櫃【典藏版】，感謝IT整理製作，感謝chin223提供掃瞄檔。<br>
+<div class="covers"><img src="covers/1010490504.jpg" HSPACE=8 align=right></div>
+好讀書櫃【典藏版】，感謝順麟整理製作，感謝chin223提供掃瞄檔。<br>
+（本書不設updb檔）<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
-本書原名《心靈分享》，於一九九八年十一月出版。作者因其中四篇内容和宗教信仰無直接關係予以抽出，更換四篇新作，成為一册專門討論宗教經驗和心靈修養的書籍。<br>
+《桃花流水沓然去》，爾雅出版社，二零一二年二月十月初版。<br>
+<br>
+王鼎鈞雖身處在大時代的洪流，卻以其豐富的閱歷、透徹的洞見、深沉的情懷和圓熟的技巧，書一方行雲流水、渾然天成。本書分為四輯，內容涵蓋文學、史論、藝術、宗教、早年回憶、社會現象等諸多面向，書中文章字字老辣、洞見深刻，擲地有聲。<br>
+<br>
+作家林文義說：「鼎公回憶錄四部曲已然完成其文學典範，三年後又一散文雋著《桃花流水沓然去》，放懷抒言，情緻深邃，黃金年華光澤曖曖，讀來逐頁皆是大智慧。……史論、文學、宗教、美感匯通澈悟，是鼎公文學的一大功德，亦是華文世界讀者值得珍藏的智慧之書。」<br>
 <br>
 <br>
 <strong>作者簡介：</strong><br>
