--- a/html/Share/1010490501.html
+++ b/html/Share/1010490501.html
@@ -24,7 +24,8 @@ ShowEpubDownload('2024/9/6');
 ShowVEpubDownload('2024/9/6');
 BookSectionEnd();
 ?>
-<img src="covers/1010490501.jpg" HSPACE=8 align=right>
+<div class="covers"><img src="covers/1010490501.jpg" HSPACE=8 align=right></div>
+
 好讀書櫃【典藏版】，感謝Ching整理製作，感謝邱五提供掃瞄檔。<br>
 <br>
 <strong>本書簡介：</strong><br>
