--- a/html/Share/1010490503.html
+++ b/html/Share/1010490503.html
@@ -24,7 +24,8 @@ ShowEpubDownload('2024/9/9');
 ShowVEpubDownload('2024/9/9');
 BookSectionEnd();
 ?>
-<img src="covers/1010490503.jpg" HSPACE=8 align=right>
+<div class="covers"><img src="covers/1010490503.jpg" HSPACE=8 align=right></div>
+
 好讀書櫃【典藏版】，感謝sue1289整理製作，感謝chin223提供掃瞄檔。<br>
 <br>
 <strong>本書簡介：</strong><br>
