--- a/html/book/audioAB005.html
+++ b/html/book/audioAB005.html
@@ -32,6 +32,7 @@ PlayMP3('AB005-22', '第二十二回《危城女嬰》劉小珍錄音 2024/6/15'
 PlayMP3('AB005-23', '第二十三回《手足情仇》劉小珍錄音 2024/6/22');
 PlayMP3('AB005-24', '第二十四回《意亂情迷》劉小珍錄音 2024/6/29');
 PlayMP3('AB005-25', '第二十五回《內憂外患》劉小珍錄音 2024/7/6');
+PlayMP3('AB005-26', '第二十六回《神鵰重劍》劉小珍錄音 2024/7/13');
 
 ?>
 
