--- a/html/book/audioAB005.html
+++ b/html/book/audioAB005.html
@@ -35,6 +35,7 @@ PlayMP3('AB005-25', '第二十五回《內憂外患》劉小珍錄音 2024/7/6')
 PlayMP3('AB005-26', '第二十六回《神鵰重劍》劉小珍錄音 2024/7/13');
 PlayMP3('AB005-27', '第二十七回《鬥智鬥力》劉小珍錄音 2024/7/20');
 PlayMP3('AB005-28', '第二十八回《洞房花燭》劉小珍錄音 2024/7/27');
+PlayMP3('AB005-29', '第二十九回《危難重重》劉小珍錄音 2024/8/3');
 
 ?>
 
