--- a/html/Share/1010490502.html
+++ b/html/Share/1010490502.html
@@ -19,13 +19,14 @@ $title = '諾貝爾文學獎全集２：羅馬史';
 $book = 'P1010490502';
 BookSectionBegin();
 ShowBookTitleOnly();
-ShowEpubDownload('2024/9/9');
-ShowVEpubDownload('2024/9/9');
+ShowEpubDownload('2024/10/7');
+ShowVEpubDownload('2024/10/7');
 BookSectionEnd();
 ?>
 <div class="covers"><img src="covers/1010490502.jpg" HSPACE=8 align=right></div>
 
-好讀書櫃【典藏版】，感謝L8879/GP整理製作，感謝chin223提供掃瞄檔。（本書不設updb檔）<br>
+好讀書櫃【典藏版】，感謝L8879/GP整理製作，感謝chin223提供掃瞄檔。<br>
+（本書不設updb檔）<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
