Uploaded audibooks AB005 part 31, AB006 part 02, and AB007 part 01

--- a/html/book/audioAB006.html
+++ b/html/book/audioAB006.html
@@ -8,10 +8,10 @@ require_once('player.php');
 <?php
 
 PlayMP3('AB006-01', '第一章《我的家世》阿馮斯錄音 2024/8/3');
+PlayMP3('AB006-02', '第二章《我的童年》阿馮斯錄音 2024/8/17');
 
 ?>
 
-<!-- PlayMP3('AB006-02', '第二章《我的童年》阿馮斯錄音 2024/8/10'); -->
 <!-- PlayMP3('AB006-03', '第三章《紫禁城內外》阿馮斯錄音 2024/8/17'); -->
 <!-- PlayMP3('AB006-04', '第四章《在天津的活動一羅振玉的努力》阿馮斯錄音 2024/8/24'); -->
 <!-- PlayMP3('AB006-05', '第五章《潛往東北一不靜的「靜園」》阿馮斯錄音 2024/8/31'); -->
