--- a/html/book/audioAB005.html
+++ b/html/book/audioAB005.html
@@ -38,6 +38,7 @@ PlayMP3('AB005-28', '第二十八回《洞房花燭》劉小珍錄音 2024/7/27'
 PlayMP3('AB005-29', '第二十九回《危難重重》劉小珍錄音 2024/8/3');
 PlayMP3('AB005-30', '第三十回《離合無常》劉小珍錄音 2024/8/10');
 PlayMP3('AB005-31', '第三十一回《半枚靈丹》劉小珍錄音 2024/8/24');
+PlayMP3('AB005-32', '第三十二回《情是何物》劉小珍錄音 2024/8/31');
 
 ?>
 
