--- a/html/book/audioAB007.html
+++ b/html/book/audioAB007.html
@@ -8,12 +8,11 @@ require_once('player.php');
 <?php
 
 PlayMP3('AB007-01', '開篇一《遠古的中國烹飪》書亞錄音 2024/8/24');
+PlayMP3('AB007-02', '開篇二《長壽之星彭祖的招牌菜》書亞錄音 2024/8/31');
 
 ?>
 
-<!-- 開篇一
-開篇二
-
+<!--
 第一篇　夏商周時代
 　第一章　跟著領導去野餐
 　第二章　治大國若烹小鮮
@@ -106,7 +105,8 @@ PlayMP3('AB007-01', '開篇一《遠古的中國烹飪》書亞錄音 2024/8/24'
 　第十一章　慈禧六十大壽的吉祥菜——「百鳥朝鳳」
 　第十二章　老佛爺與「羅漢全齋」
 　第十三章　盤點清廷的禦廚與名肴
-　第十四章　末代皇帝溥儀對禦膳的「三個講究」 -->
+　第十四章　末代皇帝溥儀對禦膳的「三個講究」
+-->
 
 </table>
 <hr align="LEFT" width="100%">
