--- a/html/book/audioAB007.html
+++ b/html/book/audioAB007.html
@@ -9,12 +9,12 @@ require_once('player.php');
 
 PlayMP3('AB007-01', '開篇一《遠古的中國烹飪》書亞錄音 2024/8/24');
 PlayMP3('AB007-02', '開篇二《長壽之星彭祖的招牌菜》書亞錄音 2024/8/31');
+PlayMP3('AB007-03', '第一篇《夏商周時代》第一章《跟著夏啟去野餐》書亞錄音 2024/9/7');
 
 ?>
 
 <!--
 第一篇　夏商周時代
-　第一章　跟著領導去野餐
 　第二章　治大國若烹小鮮
 　第三章　商紂王被「煮熊掌」硌了門牙
 　第四章　禦膳房的主任成了五品公務員
