Uploaded revised 1010490106, 1010490293, and 1010490402

--- a/html/Share/1010490106.html
+++ b/html/Share/1010490106.html
@@ -12,13 +12,13 @@ $title = '月老';
 $book = 'P1010490106';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/3/8');
-ShowEpubDownload('2023/3/8');
-ShowVEpubDownload('2023/3/8');
+ShowUpdbDownload('2024/9/10 2023/3/8');
+ShowEpubDownload('2024/9/10 2023/3/8');
+ShowVEpubDownload('2024/9/10 2023/3/8');
 BookSectionEnd();
 ?>
 <img src="covers/1010490106.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝Wanyu整理製作，感謝chin223提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝Wanyu整理製作，感謝chin223提供掃瞄檔。感謝11/Char勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -64,5 +64,156 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表</strong>：<br>
+Char 2024/9/10<br>
+#修訂 by Char<br>
+#所有單純將全形英文轉換成半形英文的勘誤，不障礙閱讀，故沒有修改<br>
+<br>
+帶著恐怖色 彩/帶著恐怖色彩<br>
+後來又 到處跨來跨去/後來又到處跨來跨去<br>
+花了很多時間齋唸佛經/花了很多時間齊唸佛經<br>
+機器人怎磨會厲害/機器人怎麼會厲害 #原文錯誤<br>
+他的朋友出來牧他/他的朋友出來救他<br>
+友情堅固峙機器人/友情堅固的機器人<br>
+「我想看看我的未婚妻。』/「我想看看我的未婚妻。」<br>
+踩著水面站隱/踩著水面站穩<br>
+留下剛好計六個鬼魂/留下剛好十六個鬼魂<br>
+該死的閔電/該死的閃電<br>
+月老的職責相/月老的職責和<br>
+強化兩人綠份/強化兩人緣份<br>
+天真無邪地說•/天真無邪地說：<br>
+這賦禿心地善良/這賊禿心地善良<br>
+老師慌慌賬張/老師慌慌張張<br>
+檢到的流浪貓/撿到的流浪貓<br>
+一年就；一萬八千元/一年就……一萬八千元/<br>
+帶著我飄上六樓。這/帶著我飄上六樓。<br>
+是個高雅舒適的地方/這是個高雅舒適的地方<br>
+每天只睡個小時/每天只睡一個小時<br>
+水遠/永遠<br>
+你不咱小咪將來出家/你不怕小咪將來出家<br>
+窗戶綠木/窗戶緣木<br>
+來回時問/來回時間<br>
+一起念書、打下/一起念書、打工<br>
+這麼胡閣/這麼胡鬧<br>
+「對不起。J/「對不起。」<br>
+一下子又叫我走開。男孩笑著/一下子又叫我走開。」男孩笑著<br>
+「女朋友就女朋友。/「女朋友就女朋友。」<br>
+找個好對象吧I/找個好對象吧！<br>
+雲霄股車/雲霄飛車<br>
+「那還用你說，己我/「那還用你說！」我<br>
+暗暗諂異/暗暗詫異<br>
+Ｈｅｙ　ｍａｎ！　ｗｅ　ａｒｅ　ｎｏｔ/Ｈｅｙ　ｍａｎ！　Ｗｅ　ａｒｅ　ｎｏｔ  #原文錯誤<br>
+Ｇｏｄ　ａｓｓｉｇｎｅｄ　ｍｅ　ｔｏ　ｃｏｍ　ｔｏ　Ｔａｉｗａｎ/Ｇｏｄ　ａｓｓｉｇｎｅｄ　ｍｅ　ｔｏ　ｃｏｍｅ　ｔｏ　Ｔａｉｗａｎ<br>
+ｂｅａｕｔｉｆｕｌ　ｇｉｒｌ　ｆａｌｌ　ｉｎ　ｌｖｅ/ｂｅａｕｔｉｆｕｌ　ｇｉｒｌ　ｆａｌｌ　ｉｎ　ｌｏｖｅ<br>
+ｓｏ　ａｔｒａｎｇｅ/ｓｏ　ｓｔｒａｎｇｅ<br>
+出現在台彎/出現在台灣<br>
+坐在榭梢/坐在樹梢<br>
+導效活著的/導致活著的<br>
+枕是紅線立刻斷掉/就是紅線立刻斷掉<br>
+很原亮/很漂亮<br>
+找坐在樹上/我坐在樹上<br>
+姻綠/姻緣<br>
+威力之彊大/威力之強大<br>
+把九轉神仙丹還我I/把九轉神仙丹還我！<br>
+在雨天袒/在雨天裡<br>
+我的、心完全/我的心完全<br>
+人家擺陣！/大家擺陣！<br>
+太 可怕了！/太可怕了！<br>
+就在這貍/就在這裡<br>
+七百年後的新娘子。/七百年後的新娘子。」<br>
+<br>
+#新增項目 by Char<br>
+#修正《終章》沒有與第28回分割的問題<br>
+<br>
+這是是我/這是我<br>
+友情上壤/友情土壤<br>
+徬沱雨聲/滂沱雨聲<br>
+上面寫著「命運』兩個血紅大字/上面寫著「命運」兩個血紅大字<br>
+幸災樂禍的原樣/幸災樂禍的屌樣<br>
+機綠/機緣<br>
+沙漢的鯨魚/沙漠的鯨魚<br>
+：是他不要我啦！/……是他不要我啦！<br>
+跟這賊禿也算有綠/跟這賊禿也算有緣<br>
+還沒有對象，」/還沒有對象？」<br>
+他的腦子。看看他以前的記憶/他的腦子，看看他以前的記憶<br>
+粉紅女搖搖頭。說/粉紅女搖搖頭，說<br>
+姆指/拇指<br>
+不賴才對。/不賴才對。」<br>
+明星和立中學/明星私立中學<br>
+祕密戶頭狸/祕密戶頭裡<br>
+說笑的男子。阿湯/說笑的男子，阿湯<br>
+粉紅女著淡紅的薄唇/粉紅女咬著淡紅的薄唇<br>
+拿出一條紅線。纏住/拿出一條紅線，纏住<br>
+陪妳走下山。妳不就好可憐/陪妳走下山，妳不就好可憐<br>
+臉盆大的劉冰/臉盆大的剉冰<br>
+揚長而去前。竟對著/揚長而去前，竟對著<br>
+看著難過的粉紅女。說/看著難過的粉紅女，說<br>
+總之。她就是/總之，她就是<br>
+照相機。怒吼。/照相機。<br>
+幫我檔子彈/幫我擋子彈<br>
+哭花的小臉。覺得這張臉/哭花的小臉，覺得這張臉<br>
+難息的美好回憶/難忘的美好回憶<br>
+所以。我不是被雷打死/所以，我不是被雷打死<br>
+跟黃子校加碼/跟黃子佼加碼<br>
+真的嗎，」/真的嗎？」<br>
+帶我看電影。卻沒對我/帶我看電影，卻沒對我<br>
+那台賓士快！/那台賓士，快！<br>
+墜人難以掙脫的/墜入難以掙脫的<br>
+會不來看我會不來看我/會不來看我……會不來看我<br>
+繁緊抱著我/緊緊抱著我<br>
+前世妻子她跟我/前世妻子！她跟我<br>
+面面相觀/面面相覷<br>
+月者/月老<br>
+你們瞻敢/你們膽敢<br>
+小味舉起左手/小咪舉起左手<br>
+的望無際的碧海/一望無際的碧海<br>
+邀約等你死後/邀約……等你死後<br>
+七天以後的天譴，/七天以後的天譴？<br>
+自彊活動/自強活動<br>
+大深刻的震憾/太深刻的震憾<br>
+「城隍爺走進內房/城隍爺走進內房<br>
+唬斕的/唬爛的<br>
+再續前綠/再續前緣<br>
+向信滿滿說/自信滿滿說<br>
+一定在那間旅社！我/一定在那間旅社！<br>
+看見五十多個死神/我看見五十多個死神<br>
+只有一十個/只有二十個<br>
+找大吼著/我大吼著<br>
+鞭就叫你們/一鞭就叫你們<br>
+我家一塊神形俱滅/大家一塊神形俱滅<br>
+自我咪雙眼滑落/自小咪雙眼滑落<br>
+運死神都看傻了眼/連死神都看傻了眼<br>
+為了妳自己。為了妳爸媽/為了妳自己，為了妳爸媽<br>
+大樹援的鮮花/大樹後的鮮花<br>
+為什慶會感人/為什麼會感人<br>
+鼓起再氣/鼓起勇氣<br>
+紛紅女張開雙手/粉紅女張開雙手<br>
+有些愛情。在死後才開始/有些愛情，在死後才開始<br>
+<br>
+女鬼說「大家都叫/女鬼說：「大家都叫<br>
+粉紅女說「走吧/粉紅女說：「走吧<br>
+砂石堆中，說「綁了又怎樣/砂石堆中，說：「綁了又怎樣<br>
+粉紅女搖搖頭，說「要是你們/粉紅女搖搖頭，說：「要是你們<br>
+粉紅女堅定地說「死神一直/粉紅女堅定地說:「死神一直<br>
+粉紅女搖搖頭，說「再多告訴/粉紅女搖搖頭，說：「再多告訴<br>
+我看著車窗外，說「直到國三/我看著車窗外，說：「直到國三<br>
+我不好意思地說「別那麼說/我不好意思地說：「別那麼說<br>
+我感動地看著她，說「謝謝/我感動地看著她，說：「謝謝<br>
+邱比特甩著小鳥，說/邱比特甩著小鳥，說：<br>
+長髮女人嘆了口氣說「我們/長髮女人嘆了口氣說：「我們<br>
+粉紅女搖搖頭，說「時間不多了/粉紅女搖搖頭，說：「時間不多了<br>
+我長嘆，說「我不懂/我長嘆，說：「我不懂<br>
+眼放異光，說「有了/眼放異光，說：「有了<br>
+我看著小咪，說「他會疼妳/我看著小咪，說：「他會疼妳<br>
+<br>
+嘻嘻笑道；「對呀/嘻嘻笑道：「對呀<br>
+心中一沉，說；「你們/心中一沉，說：「你們<br>
+拿起七緣紅線說；「不管/拿起七緣紅線說：「不管<br>
+大聲道；「你就是那個叫/大聲道：「你就是那個叫<br>
+氣憤說道；「對！/氣憤說道：「對！<br>
+<br>
+天真無邪地說•「這沒什麼/天真無邪地說：「這沒什麼<br>
+急切地說•「孝綸/急切地說：「孝綸<br>
+劃了兩條線的女人說•「本來聽說/劃了兩條線的女人說：「本來聽說<br>
+第三條紅線，說•「第三個男人/第三條紅線，說：「第三個男人<br>
 </font>
 </td></tr></table>
