--- a/html/Share/1010490293.html
+++ b/html/Share/1010490293.html
@@ -12,13 +12,13 @@ $title = 'Life 2.0：我的樂活人生';
 $book = 'P1010490293';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/10/23');
-ShowEpubDownload('2023/10/23');
-ShowVEpubDownload('2023/10/23');
+ShowUpdbDownload('2024/9/10 2023/10/23');
+ShowEpubDownload('2024/9/10 2023/10/23');
+ShowVEpubDownload('2024/9/10 2023/10/23');
 BookSectionEnd();
 ?>
 <img src="covers/1010490293.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝順麟整理製作，感謝chin223提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝順麟整理製作，感謝chin223提供掃瞄檔。感謝滿玉/Char勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -58,5 +58,24 @@ BookSectionEnd();
 <br>-->
 <font size=2>
 <strong>勘誤表：</strong><br>
+滿玉/Char 2024/9/10<br>
+最校最差穿著/全校最差穿著<br>
+從舊金山搬到紐約紐約夏天的悶熱/從舊金山搬到紐約，紐約夏天的悶熱<br>
+<br>
+#以下標點只於mPDB有錯，但於閱讀器顯示並無錯誤<br>
+#(Levi『s)/(Levi's)<br>
+#(Victoria『s secret )/(Victoria's secrets )<br>
+#<I still haven『t found what I「m looking for>/<I still haven't found what I'm looking for><br>
+#(The Gentlemen『s fund/(The Gentlemen 's fund<br>
+#Don『t say goodbye /Don't say goodbye<br>
+<br>
+#校正 by Char<br>
+small/Small<br>
+1990年會提出/1990年曾提出<br>
+竟然還要課稅/竟然還要科稅<br>
+政策遙無期/政策遙遙無期<br>
+我自己會被視為/我自己曾被視為<br>
+今我永難忘懷/令我永難忘懷<br>
+天階夜色凉如水/天階夜色涼如水<br>
 </font>
 </td></tr></table>
