--- a/html/Share/1010490402.html
+++ b/html/Share/1010490402.html
@@ -13,13 +13,13 @@ $title = '24小時神祕書店';
 $book = 'P1010490402';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2024/3/27');
-ShowEpubDownload('2024/3/27');
-ShowVEpubDownload('2024/3/27');
+ShowUpdbDownload('2024/9/10 2024/3/27');
+ShowEpubDownload('2024/9/10 2024/3/27');
+ShowVEpubDownload('2024/9/10 2024/3/27');
 BookSectionEnd();
 ?>
 <img src="covers/1010490402.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝Angela Huang整理製作，感謝邱五提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝Angela Huang整理製作，感謝邱五提供掃瞄檔。感謝Jungle Wang/Char勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -84,5 +84,22 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+Jungle Wang/Char 2024/9/10<br>
+，是藍球技術/，是籃球技術<br>
+賺取最低H資的同/賺取最低工資的同<br>
+皮呈亮灰色*是光線一照/皮呈亮灰色，是光線一照<br>
+。﹁而旦不是/。﹁而且不是<br>
+端，轟蟲加嘶/端，轟轟加嘶<br>
+院，闐暗微暖。刺/院，闃暗微暖。刺<br>
+x的稼伙。這/x的傢伙。這<br>
+介於雨盞明亮/介於兩盞明亮<br>
+區的傑街十I號，/區的傑街十一號，<br>
+︱在儺開雙頁/︱在攤開雙頁<br>
+重的瓦愣紙板裁切/重的瓦楞紙板裁切<br>
+們的顧吝。﹂/們的顧客。﹂<br>
+攝影一樣逼而且可以/攝影一樣逼真而且可以<br>
+越過Gocgle的翠/越過Google的翠<br>
+我的心枰评猛跳。鎮/我的心怦怦猛跳。鎮<br>
+有個grmmblegear 3/有個grumblegear 3<br>
 </font>
 </td></tr></table>
