--- a/html/book/audioAB005.html
+++ b/html/book/audioAB005.html
@@ -41,6 +41,7 @@ PlayMP3('AB005-31', '第三十一回《半枚靈丹》劉小珍錄音 2024/8/24'
 PlayMP3('AB005-32', '第三十二回《情是何物》劉小珍錄音 2024/8/31');
 PlayMP3('AB005-33', '第三十三回《風陵夜話》劉小珍錄音 2024/9/7');
 PlayMP3('AB005-34', '第三十四回《排難解紛》劉小珍錄音 2024/9/14');
+PlayMP3('AB005-35', '第三十五回《三枚金針》劉小珍錄音 2024/9/14');
 
 ?>
 
