Uploaded revised book 17B8

--- a/html/book/17B8.html
+++ b/html/book/17B8.html
@@ -12,20 +12,85 @@ $title = '女巫與幻獸';
 $book = 'G17B8';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/5/5 (219K)');
+ShowUpdbDownload('2024/10/1 2017/5/5 (219K)');
 ShowPrcDownload('2017/5/5 (223K)');
 ShowMobiDownload('2017/5/5 (632K)');
-ShowEpubDownload('2017/5/5 (151K)');
-ShowVEpubDownload('2017/5/5 (151K)');
+ShowEpubDownload('2024/10/1 2017/5/5 (151K)');
+ShowVEpubDownload('2024/10/1 2017/5/5 (151K)');
 BookSectionEnd();
 ?>
 <img src="covers/17B8.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝JackJiang掃描原書整理製作，並提供掃描檔。譯者陳敬旻。<br>
+好讀書櫃《典藏版》，感謝JackJiang掃描原書整理製作，並提供掃描檔。譯者陳敬旻。感謝Jack勘誤。<br>
 <br>
 作者派翠西亞．麥奇莉普（Patricia Anne McKillip, 1948.2.29-）生於美國奧瑞岡州西冷市，於加州聖荷西州立大學獲得英國文學碩士學位。碩士畢業後成為專職作家，尤以奇幻小說知名。著有多本奇幻長篇小說，包括The Book of Atrix Wolfe、Winter Rose、Song for the Basilisk等書。此外，亦寫作成人與青少年小說。1975年以《女巫與幻獸》獲得世界奇幻獎、1994年《豐饒與陌異》獲創神奇幻文學獎（Mythopoeic Award）、《風中豎琴手》入圍雨果獎、《冬日玫瑰》入圍星雲獎。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(Jack 2024/10/1)<br>
+柯爾十分緩慢 / 柯倫十分緩慢<br>
+艾柯倫爾沃德 / 艾爾沃德<br>
+乃貝 / 悉貝<br>
+惱德 / 惴德<br>
+柯綸 / 柯倫<br>
+諾說 / 諾銳<br>
+你有天賦。又善良 / 你有天賦，又善良<br>
+惴德的兒子。他們對我 / 惴德的兒子，他們對我<br>
+這種東西。讓他皮膚 / 這種東西，讓他皮膚<br>
+﹁不用，﹂悉貝低語，﹁不用，﹂ / ﹁不用，﹂悉貝低語，﹁不用。﹂<br>
+牠在悉面前 / 牠在悉貝面前<br>
+大理石地恢 / 大理石地板<br>
+﹁悉貝，﹂柯倫叫著 / ﹁悉貝。﹂柯倫叫著<br>
+柯論 / 柯倫<br>
+知道其相 / 知道真相<br>
+對你而言。可能就是 / 對你而言，可能就是<br>
+爭辯悉貝 / 爭辯。悉貝<br>
+型形 / 塑形<br>
+更真實，不可改變 / 更真實、不可改變<br>
+男女女 / 男男女女<br>
+主視她 / 注視她<br>
+迷悛 / 迷梭<br>
+比多數人都傻， / 比多數人都傻。<br>
+妳綸了 / 妳偷了<br>
+四處探詢。 / 四處探詢，<br>
+分享： / 分享。<br>
+受你束縛。 / 受你束縛，<br>
+披風特峨 / 披風。特峨<br>
+﹁我也哭了﹂她低語，﹁會痛﹂ / ﹁我也哭了。﹂她低語，﹁會痛。﹂<br>
+進來。我告訴你。 / 進來，我告訴你。<br>
+頻時 / 頓時<br>
+要不是垓德。 / 要不是垓德，<br>
+﹁希望如此﹂ / ﹁希望如此。﹂<br>
+因勒 / 固勒<br>
+不行﹂ / 不行。﹂<br>
+悉枺 / 悉林<br>
+國更危險 / 國王更危險<br>
+來趙 / 來趟<br>
+偵查要是 / 偵查，要是<br>
+之一。 / 之一，<br>
+懲罰德 / 懲罰惴德<br>
+親戚我在 / 親戚，我在<br>
+悉林林 / 悉林<br>
+間聲咆嘯 / 尖聲咆嘯<br>
+衛兵，﹂ / 衛兵。﹂<br>
+對衛說 / 對衛兵說<br>
+走向何倫 / 走向柯倫<br>
+洛克低語﹁ / 洛克低語，﹁<br>
+埃歐在悉貝身旁停步 / 他在悉貝身旁停步(中文版有誤，參照原文更正)<br>
+兩個條件。 / 兩個條件，<br>
+回艾爾德山時。 / 回艾爾德山時，<br>
+移動。陸續 / 移動，陸續<br>
+尼肯須主 / 尼肯領主<br>
+他話著來見我 / 他活著來見我<br>
+熈尼斯 / 熙尼斯<br>
+我在做什麼， / 我在做什麼。<br>
+阿倫 / 柯倫<br>
+您要幹什麼 / 你要幹什麼<br>
+惴的注意力 / 惴德的注意力<br>
+柯禴 / 柯倫<br>
+悉貝低語：﹁不，﹂ / 悉貝低語：﹁不。﹂<br>
+我是譚龍悉貝。 / 我是譚龍。悉貝，<br>
+無懽 / 無權<br>
+<br>
 (mPDB 2017/5/5)<br>
 調整排版 (數處)<br>
 修改標點 (多處)<br>
