--- a/html/book/12I3.html
+++ b/html/book/12I3.html
@@ -12,15 +12,15 @@ $title = '記憶像鐵軌一樣長';
 $book = 'B12I3';
 BookSectionBegin();
 ShowBookTitle() ;
-ShowUpdbDownload('2012/11/16 (230K) 2016/11/4');
+ShowUpdbDownload('2024/10/8 (230K) 2012/11/16 2016/11/4');
 ShowPrcDownload('2012/11/16 (265K) 2016/11/4');
 ShowMobiDownload('2016/8/5 (761K) 2016/11/4');
-ShowEpubDownload('2012/11/16 (193K) 2016/11/4');
-ShowVEpubDownload('2012/11/16 (193K) 2016/11/4');
+ShowEpubDownload('2024/10/8 (193K) 2012/11/16 2016/11/4');
+ShowVEpubDownload('2024/10/8 (193K) 2012/11/16 2016/11/4');
 BookSectionEnd();
 ?>
 <img src="covers/12I3.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝Smiley參照原書整理校正過。感謝chin223提供掃描檔。感謝sue1289勘誤65處、allen勘誤2處。<br>
+好讀書櫃《典藏版》，感謝Smiley參照原書整理校正過。感謝chin223提供掃描檔。感謝sue1289、allen、順麟/IT勘誤。<br>
 <br>
 記憶像鐵軌一樣長<br>
 作者：余光中<br>
@@ -28,7 +28,29 @@ BookSectionEnd();
 初版：一九八七年一月<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+（順麟/IT 2024/10/8）<br>
+還是天真的男同學叱？/還是天真的男同學呢？<br>
+空間的代價是時間」/「空間的代價是時間」（缺開引號）<br>
+ 　　　知道了那是什麼之後/　　知道了那是什麼之後（段落開首多了一個空格）<br>
+態度的扭傳/態度的扭轉<br>
+一面打著哨趕馬/一面打著唿哨趕馬（未能顯示「唿」字）<br>
+軟封面的平裝木/軟封面的平裝本<br>
+I glode.I treaded on/I glode. I treaded on（缺斷句空格）<br>
+　　這種彆扭的句法/這種彆扭的句法（根據原書是同一段落）<br>
+一隻小蘋果/一只小蘋果<br>
+竟與飛鵝嶺打了個照面　那岌岌可危的…/竟與飛鵝嶺打了個照面。那岌岌可危的…（缺句號；根據原書是同一段落）<br>
+起伏跌岩/起伏跌宕<br>
+大過癮了/太過癮了<br>
+敻遼/窔遼（原書誤，根據「教育部重編國語辭典修訂本」修改之，共兩處）<br>
+它最多眨一下冷眼只一眨，/它最多眨一下冷眼，只一眨，（缺斷句逗號）<br>
+髣髯倪瓚/髣髴倪瓚<br>
+厚賓的長木椅/厚實的長木椅<br>
+洗耳似空際的泉/洗耳似空際的廻泉（未能顯示「廻」字）<br>
+梯就把我接到地下室去。/廻梯就把我接到地下室去。（未能顯示「廻」字）<br>
+在水上連袂翔/在水上連袂廻翔（未能顯示「廻」字）<br>
+盡付與無情的鋒/盡付與無情的鋒刄（未能顯示「刄」字）<br>
+<br>
 (allen 2016/11/4)<br>
 杖展登臨，可以寫田園詩/杖履登臨，可以寫田園詩<br>
 在路警耽耽的監視之下/在路警眈眈的監視之下<br>
