Uploaded books 1010490522 thru 1010490527

--- a/html/Share/1010490511.html
+++ b/html/Share/1010490511.html
@@ -54,6 +54,9 @@ BookSectionEnd();
 生於馬德里，西班牙土木工程師、數學家、政治家，十九世紀末期西班牙最傑出的劇作家，他與法國詩人弗雷德里克．米斯特拉爾一起獲得了一九零四年諾貝爾文學獎，成為第一個獲得諾貝爾獎的西班牙人。他的代表作為《偉大的牽線人》（El gran Galeoto）。葉卻加萊後半生共創作了上百部各種類型的戲劇，代表作有《或狂狷或神聖》、《大帆船》、《瘋神》、《唐璜之子》、《瑪利亞納》。他的戲劇多是揭示人、人性、理智與社會、社會偏見的衝突，展示人的精神悲劇；多是反對專制統治，爭取自由平等的吶喊。在《大帆船》中，他極力抨擊社會的醜惡現象，針砭造成社會衝突的毀謗、醜聞和偏見。從藝術上看，葉卻加萊師承的作家既多且雜，使得他的戲劇既有情節劇、夢幻劇，也有浪漫主義的理想劇、自然主義的歷史傳奇劇，更有切中時弊的社會問題劇。<br>
 <br>
 <br>
+譯者：宋樹涼（《超越人力之外》）、劉啓分（《大帆船》 ）<br>
+<br>
+<br>
 <font size=2>
 <strong>勘誤表：</strong><br>
 </font>
