--- a/html/Share/1010490514.html
+++ b/html/Share/1010490514.html
@@ -40,8 +40,8 @@ BookSectionEnd();
 <br>
 <strong>作者簡介：</strong><br>
 <br>
-舒國治
- 
+舒國治<br>
+<br>
 散文家。一九五二年生於台北。先習電影，後注心思於文學。<br>
 <br>
 六十年代薰陶於西洋與日本電影並同搖滾樂而成長的半城半鄉少年。與文學相較，影像與真實生活影響他更多。七十年代原有意創作電影，但終只能步入寫作，卻成稿不多。<br>
