Uploaded audiobook AB005 part 39

--- a/html/book/audioAB005.html
+++ b/html/book/audioAB005.html
@@ -45,6 +45,7 @@ PlayMP3('AB005-35', '第三十五回《三枚金針》劉小珍錄音 2024/9/21'
 PlayMP3('AB005-36', '第三十六回《獻禮祝壽》劉小珍錄音 2024/9/28');
 PlayMP3('AB005-37', '第三十七回《三世恩怨》劉小珍錄音 2024/10/5');
 PlayMP3('AB005-38', '第三十八回《生死茫茫》劉小珍錄音 2024/10/12');
+PlayMP3('AB005-39', '第三十九回《大戰襄陽》劉小珍錄音 2024/10/19');
 
 ?>
 
