Uploaded revised book 1010490501

--- a/html/Share/1010490501.html
+++ b/html/Share/1010490501.html
@@ -19,14 +19,14 @@ $title = '反轉';
 $book = 'P1010490501';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2024/10/4');
-ShowEpubDownload('2024/10/4');
-ShowVEpubDownload('2024/10/4');
+ShowUpdbDownload('2024/10/22 2024/10/4');
+ShowEpubDownload('2024/10/22 2024/10/4');
+ShowVEpubDownload('2024/10/22 2024/10/4');
 BookSectionEnd();
 ?>
 <div class="covers"><img src="covers/1010490501.jpg" HSPACE=8 align=right></div>
 
-好讀書櫃【典藏版】，感謝Ching整理製作，感謝邱五提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝Ching整理製作，感謝邱五提供掃瞄檔。感謝mitter/Ching勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -68,5 +68,14 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+(mitter/Ching 2024/10/22)<br>
+咖啡豆專賣買店/咖啡豆專賣店<br>
+往日憶的物品/往日記憶的物品（原書檔：往日回憶的物品）<br>
+薔麥涼麵/蕎麥涼麵<br>
+成認作家/成為作家<br>
+河以順藤摸瓜/可以順藤摸瓜<br>
+就是你之一前吃蜂蜜吐司/就是你之前吃蜂蜜吐司<br>
+渾身散髮出/渾身散發出<br>
+當初是自己為為他們牽了線/當初是自己為他們牽了線<br>
 </font>
 </td></tr></table>
