Uploaded audiobook AB005 parts 40-41

--- a/html/book/audioAB005.html
+++ b/html/book/audioAB005.html
@@ -46,6 +46,8 @@ PlayMP3('AB005-36', '第三十六回《獻禮祝壽》劉小珍錄音 2024/9/28'
 PlayMP3('AB005-37', '第三十七回《三世恩怨》劉小珍錄音 2024/10/5');
 PlayMP3('AB005-38', '第三十八回《生死茫茫》劉小珍錄音 2024/10/12');
 PlayMP3('AB005-39', '第三十九回《大戰襄陽》劉小珍錄音 2024/10/19');
+PlayMP3('AB005-40', '第四十回《華山之巔》劉小珍錄音 2024/10/26');
+PlayMP3('AB005-41', '第四十一回《後記》劉小珍錄音 2024/10/26');
 
 ?>
 
