--- a/html/Share/1010490197.html
+++ b/html/Share/1010490197.html
@@ -12,13 +12,13 @@ $title = '夢之湖';
 $book = 'P1010490197';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/7/3');
-ShowEpubDownload('2023/7/3');
-ShowVEpubDownload('2023/7/3');
+ShowUpdbDownload('2024/10/29 2023/7/3');
+ShowEpubDownload('2024/10/29 2023/7/3');
+ShowVEpubDownload('2024/10/29 2023/7/3');
 BookSectionEnd();
 ?>
 <img src="covers/1010490197.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝Angela Huang整理製作，感謝邱五提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝Angela Huang整理製作，感謝邱五提供掃瞄檔。感謝regina/Char勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -57,5 +57,96 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+(regina/Char 2024/10/29)<br>
+<br>
+#校正：regina<br>
+<br>
+洽然自在/怡然自在<br>
+帶去埃及的故車/帶去埃及的故事<br>
+爸爸以的辦公室/爸爸以前的辦公室<br>
+逵麼多年了/這麼多年了<br>
+泰妖然自若/泰然自若<br>
+末婚少女/未婚少女<br>
+我想荖吉隆/我想著吉隆<br>
+今夭/今天<br>
+妳說的這份遣囑/妳說的這份遺囑<br>
+和妤/和好<br>
+出門的時候還把用力甩門/出門的時候還用力甩門<br>
+用我們爸笆的名字/用我們爸爸的名字<br>
+<br>
+#校正：Char<br>
+<br>
+第一章<br>
+緊急狀況啊；露西/緊急狀況啊，露西<br>
+<br>
+第三章<br>
+如杲你說/如果你說<br>
+夢湖的風很強，•公園裡/夢湖的風很強，公園裡<br>
+Feaful Symmetry/Fearful Symmetry<br>
+The Tiger/The Tyger<br>
+搜尋到線網路/搜尋到無線網路<br>
+<br>
+第四章<br>
+還沒裝修完，•都還沒人買/還沒裝修完，都還沒人買<br>
+<br>
+第五章<br>
+名竽/名字<br>
+<br>
+第六章<br>
+自已不該/自己不該<br>
+在聖公會裡，﹄/在聖公會裡，<br>
+孩於/孩子<br>
+<br>
+第七章<br>
+Guess I﹃m/Guess I'm<br>
+<br>
+第八章<br>
+坐了好一•陣子/坐了好一陣子<br>
+<br>
+第十章<br>
+創辦人之一,除此/創辦人之一，除此<br>
+面容長相，•沒留意/面容長相，沒留意<br>
+<br>
+第十一章<br>
+不禁了解為何/不禁想了解為何<br>
+透過牆，壁縫隙/透過牆壁縫隙<br>
+<br>
+第十二章<br>
+築牆檔住/築牆擋住<br>
+一點力量也沒有•此外/一點力量也沒有；此外<br>
+而我想他。如今我/而我相信他。如今我<br>
+<br>
+第十三章<br>
+空蕩蕩的，，通往/空蕩蕩的，通往<br>
+第二一道窗/第三道窗<br>
+<br>
+第十四章<br>
+膚觸撫著我的/膚觸撫著我的背<br>
+<br>
+第十五章<br>
+親愛的麗絲/親愛的愛麗絲<br>
+<br>
+第十八章<br>
+鼠碗巾/擦碗巾<br>
+裡頭的館/𥚃頭的餌<br>
+<br>
+第十九章<br>
+她聳聲肩/她聳聳肩<br>
+伹也夠好了/但也夠好了<br>
+寬闇草坪/寬闊草坪<br>
+遣囑的秘密/遺囑的秘密<br>
+點點頭說「 有一點。」/點點頭說：「 有一點。」<br>
+很好玩啊「我很喜歡/很好玩啊，我很喜歡<br>
+擺回釣具/擺回釣具箱<br>
+<br>
+第二十章<br>
+灘開趴著/攤開趴著<br>
+我腰後。•我漂著/我腰後。我漂著<br>
+寬闇路肩/寬闊路肩<br>
+白己/自己<br>
+我一一中響起/我腦中響起<br>
+<br>
+第二十一章<br>
+我看得出來（不分段）他心裡很煩惱。<br>
 </font>
 </td></tr></table>
