Updated book description 1010490244

--- a/html/Share/1010490244.html
+++ b/html/Share/1010490244.html
@@ -22,7 +22,7 @@ BookSectionEnd();
 <br>
 <strong>本書簡介：</strong><br>
 <br>
-《長安恨》是長篇歷史小說《長安恨》的續篇，寫黃巢起義由鼎盛到敗亡的過程。讀了《長安恨》，再看《長安恨》，才能了解黃巢起義的全貌。<br>
+《長安恨》是長篇歷史小說《九月菊》的續篇，寫黃巢起義由鼎盛到敗亡的過程。讀了《九月菊長安恨》，再看《長安恨》，才能了解黃巢起義的全貌。<br>
 <br>
 其中，晚唐著名詩人皮日休參加義軍；黃巢率百萬義軍攻占長安，冕旒為帝；朱溫叛降；李克用鴉軍出兵；曹氏夫人、丹霞、柏枝幾個奇女子或戰死沙場，或情死宮廷，或自裁於危難之頃等事件，均寫得淋漓盡致。全書故事波瀾起伏，環環相扣，奇譎曲折，引人入勝。語言優美典雅，韻味雋永。<br>
 <br>
