--- a/html/Share/1010490532.html
+++ b/html/Share/1010490532.html
@@ -29,7 +29,7 @@ BookSectionEnd();
 <br>
 <strong>本書簡介：</strong><br>
 <br>
-《這次勒卡雷將寫作的觸角深入北高加索山區，從過往的英、俄兩國之間的間諜大戰轉而關注俄國境內糾葛難分的種族衝突。藉由提姆．克藍瑪步步追索昔日一手訓練出的反間諜——萊瑞．裴第佛的過程，凸顯出勒卡雷高超的描繪間諜行動過程的高超功力，更透過萊瑞．裴第佛觀察之眼、敘述之口，展現出更深層的人道關懷。<br>
+這次勒卡雷將寫作的觸角深入北高加索山區，從過往的英、俄兩國之間的間諜大戰轉而關注俄國境內糾葛難分的種族衝突。藉由提姆．克藍瑪步步追索昔日一手訓練出的反間諜——萊瑞．裴第佛的過程，凸顯出勒卡雷高超的描繪間諜行動過程的高超功力，更透過萊瑞．裴第佛觀察之眼、敘述之口，展現出更深層的人道關懷。<br>
 <br>
 勒卡雷以自身真實的經驗，加上獨一無二的寫作天賦，細膩又深刻地描寫漫長間諜生涯中令人印象深刻的故事。兩難的道德處境、曖昧的善惡定義，內容富含哲理，情節引人入勝，閱卷欲罷不能，不愧為享譽全球的大師級作家。<br>
 <br>
