--- a/html/Share/1010490537.html
+++ b/html/Share/1010490537.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
 SetTitle("邵正宏【日子開心走】");
-SetLink('<a href="?M=hd&P=fiction-7"> 小說園地 書目</a>');
+SetLink('<a href="?M=hd&P=wisdom-3"> 隨身智囊 書目</a>');
 </script>
 <style>
     .center {
@@ -37,13 +37,6 @@ BookSectionEnd();
 <br>
 <br>
 <strong>作者簡介：</strong><br>
-<br>
-強納森．法蘭岑（Jonathan Franzen）<br>
-<br>
-1959年出生，美國小說家、散文作家，《紐約客》撰稿人。1996年，法蘭岑在《哈潑》雜誌上發表的一篇題為〈自尋煩惱？〉的隨筆，表達了其對文學現狀的惋惜，從此聞名於世。第三部小說《修正》（2001）出版時好評如潮，法蘭岑以這齣紛亂的家庭諷刺劇獲得美國國家圖書獎及美國普利茲獎提名。第四本長篇小說《自由》出版時登上《時代》雜誌封面，被譽為「偉大的美國小說家」（Great American Novelist）。之後的長篇小說作品包括《純真》及《十字路》。另著有散文作品《如何獨處》、《到遠方》與《地球盡頭的盡頭》。<br>
-<br>
-<br>
-譯者簡介：<br>
 <br>
 邵正宏<br>
 <br>
