--- a/html/book/audioAB008.html
+++ b/html/book/audioAB008.html
@@ -8,6 +8,7 @@ require_once('player.php');
 <?php
 
 PlayMP3('AB008-01', '第一章《碧窗有鬼殺人》劉小珍錄音 2024/11/9');
+PlayMP3('AB008-02', '第二章《一品墳》劉小珍錄音 2024/11/16');
 
 ?>
 
